src/test/resources/testcases/invalid/func_arg_mismatch.tc
// Test function argument mismatch
int add(int a, int b) {
    return a + b;
}
int main() {
    return add(1); // Should fail (expects 2 args)
}
